disable qml disk cache

this should prevent cache related problems when dealing with full or
near-full disks

BUG: 466415
BUG: 467135